--- a/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
+++ b/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Analysis\Miscellaneous\TestLimitTokenCountAnalyzer.cs" />
     <Compile Include="Analysis\Miscellaneous\TestLimitTokenCountFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\TestLimitTokenCountFilterFactory.cs" />
+    <Compile Include="Analysis\Miscellaneous\TestLimitTokenPositionFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\TestLimitTokenPositionFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\TestLucene47WordDelimiterFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\TestPerFieldAnalyzerWrapper.cs" />
