Ported RemoveDuplicatesTokenFilter, RemoveDuplicatesTokenFilterFactory + tests

--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -119,6 +119,8 @@
     <Compile Include="Analysis\Miscellaneous\PerFieldAnalyzerWrapper.cs" />
     <Compile Include="Analysis\Miscellaneous\PrefixAndSuffixAwareTokenFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\PrefixAwareTokenFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\RemoveDuplicatesTokenFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\RemoveDuplicatesTokenFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\SetKeywordMarkerFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\SingleTokenTokenStream.cs" />
     <Compile Include="Analysis\Miscellaneous\WordDelimiterFilter.cs" />
