--- a/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
+++ b/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
@@ -103,6 +103,8 @@
     <Compile Include="Analysis\Miscellaneous\TestPerFieldAnalyzerWrapper.cs" />
     <Compile Include="Analysis\Miscellaneous\TestPrefixAndSuffixAwareTokenFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\TestPrefixAwareTokenFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\TestRemoveDuplicatesTokenFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\TestRemoveDuplicatesTokenFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\TestWordDelimiterFilter.cs" />
     <Compile Include="Analysis\Ngram\EdgeNGramTokenFilterTest.cs" />
     <Compile Include="Analysis\Ngram\EdgeNGramTokenizerTest.cs" />
