Ported StemmerOverrideFilter, TrimFilter, TruncateTokenFilter + factories + tests

--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -121,8 +121,18 @@
     <Compile Include="Analysis\Miscellaneous\PrefixAwareTokenFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\RemoveDuplicatesTokenFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\RemoveDuplicatesTokenFilterFactory.cs" />
+    <Compile Include="Analysis\Miscellaneous\ScandinavianFoldingFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\ScandinavianFoldingFilterFactory.cs" />
+    <Compile Include="Analysis\Miscellaneous\ScandinavianNormalizationFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\ScandinavianNormalizationFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\SetKeywordMarkerFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\SingleTokenTokenStream.cs" />
+    <Compile Include="Analysis\Miscellaneous\StemmerOverrideFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\StemmerOverrideFilterFactory.cs" />
+    <Compile Include="Analysis\Miscellaneous\TrimFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\TrimFilterFactory.cs" />
+    <Compile Include="Analysis\Miscellaneous\TruncateTokenFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\TruncateTokenFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\WordDelimiterFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\WordDelimiterFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\WordDelimiterIterator.cs" />
