--- a/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
+++ b/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Analysis\Pattern\TestPatternReplaceFilterFactory.cs" />
     <Compile Include="Analysis\Pattern\TestPatternTokenizer.cs" />
     <Compile Include="Analysis\Pattern\TestPatternTokenizerFactory.cs" />
+    <Compile Include="Analysis\Position\PositionFilterTest.cs" />
     <Compile Include="Analysis\Reverse\TestReverseStringFilter.cs" />
     <Compile Include="Analysis\Reverse\TestReverseStringFilterFactory.cs" />
     <Compile Include="Analysis\Shingle\ShingleAnalyzerWrapperTest.cs" />
