Ported Analysis.Payloads + tests

--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -159,6 +159,20 @@
     <Compile Include="Analysis\Pattern\PatternReplaceFilterFactory.cs" />
     <Compile Include="Analysis\Pattern\PatternTokenizer.cs" />
     <Compile Include="Analysis\Pattern\PatternTokenizerFactory.cs" />
+    <Compile Include="Analysis\Payloads\AbstractEncoder.cs" />
+    <Compile Include="Analysis\Payloads\DelimitedPayloadTokenFilter.cs" />
+    <Compile Include="Analysis\Payloads\DelimitedPayloadTokenFilterFactory.cs" />
+    <Compile Include="Analysis\Payloads\FloatEncoder.cs" />
+    <Compile Include="Analysis\Payloads\IdentityEncoder.cs" />
+    <Compile Include="Analysis\Payloads\IntegerEncoder.cs" />
+    <Compile Include="Analysis\Payloads\NumericPayloadTokenFilter.cs" />
+    <Compile Include="Analysis\Payloads\NumericPayloadTokenFilterFactory.cs" />
+    <Compile Include="Analysis\Payloads\PayloadEncoder.cs" />
+    <Compile Include="Analysis\Payloads\PayloadHelper.cs" />
+    <Compile Include="Analysis\Payloads\TokenOffsetPayloadTokenFilter.cs" />
+    <Compile Include="Analysis\Payloads\TokenOffsetPayloadTokenFilterFactory.cs" />
+    <Compile Include="Analysis\Payloads\TypeAsPayloadTokenFilter.cs" />
+    <Compile Include="Analysis\Payloads\TypeAsPayloadTokenFilterFactory.cs" />
     <Compile Include="Analysis\Position\PositionFilter.cs" />
     <Compile Include="Analysis\Position\PositionFilterFactory.cs" />
     <Compile Include="Analysis\Reverse\ReverseStringFilter.cs" />
