Ported Analysis.Query namespace + tests. Fixed Query namespace collisions in test framework.

--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Analysis\Payloads\TypeAsPayloadTokenFilterFactory.cs" />
     <Compile Include="Analysis\Position\PositionFilter.cs" />
     <Compile Include="Analysis\Position\PositionFilterFactory.cs" />
+    <Compile Include="Analysis\Query\QueryAutoStopWordAnalyzer.cs" />
     <Compile Include="Analysis\Reverse\ReverseStringFilter.cs" />
     <Compile Include="Analysis\Reverse\ReverseStringFilterFactory.cs" />
     <Compile Include="Analysis\Shingle\ShingleAnalyzerWrapper.cs" />
