--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -181,6 +181,10 @@
     <Compile Include="Analysis\Shingle\ShingleAnalyzerWrapper.cs" />
     <Compile Include="Analysis\Shingle\ShingleFilter.cs" />
     <Compile Include="Analysis\Shingle\ShingleFilterFactory.cs" />
+    <Compile Include="Analysis\Sinks\DateRecognizerSinkFilter.cs" />
+    <Compile Include="Analysis\Sinks\TeeSinkTokenFilter.cs" />
+    <Compile Include="Analysis\Sinks\TokenRangeSinkFilter.cs" />
+    <Compile Include="Analysis\Sinks\TokenTypeSinkFilter.cs" />
     <Compile Include="Analysis\Standard\ClassicAnalyzer.cs" />
     <Compile Include="Analysis\Standard\ClassicFilter.cs">
       <SubType>Code</SubType>
