--- a/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
+++ b/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
@@ -144,6 +144,10 @@
     <Compile Include="Analysis\Shingle\ShingleAnalyzerWrapperTest.cs" />
     <Compile Include="Analysis\Shingle\ShingleFilterTest.cs" />
     <Compile Include="Analysis\Shingle\TestShingleFilterFactory.cs" />
+    <Compile Include="Analysis\Sinks\DateRecognizerSinkTokenizerTest.cs" />
+    <Compile Include="Analysis\Sinks\TestTeeSinkTokenFilter.cs" />
+    <Compile Include="Analysis\Sinks\TokenRangeSinkTokenizerTest.cs" />
+    <Compile Include="Analysis\Sinks\TokenTypeSinkTokenizerTest.cs" />
     <Compile Include="Analysis\Standard\TestStandardFactories.cs" />
     <Compile Include="Analysis\Standard\TestUAX29URLEmailTokenizerFactory.cs">
       <SubType>Code</SubType>
