--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Analysis\Bg\BulgarianAnalyzer.cs" />
@@ -91,6 +93,19 @@
     <Compile Include="Analysis\CommonGrams\CommonGramsFilterFactory.cs" />
     <Compile Include="Analysis\CommonGrams\CommonGramsQueryFilter.cs" />
     <Compile Include="Analysis\CommonGrams\CommonGramsQueryFilterFactory.cs" />
+    <Compile Include="Analysis\Compound\CompoundWordTokenFilterBase.cs" />
+    <Compile Include="Analysis\Compound\DictionaryCompoundWordTokenFilter.cs" />
+    <Compile Include="Analysis\Compound\DictionaryCompoundWordTokenFilterFactory.cs" />
+    <Compile Include="Analysis\Compound\HyphenationCompoundWordTokenFilter.cs" />
+    <Compile Include="Analysis\Compound\HyphenationCompoundWordTokenFilterFactory.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\ByteVector.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\CharVector.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\Hyphen.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\Hyphenation.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\HyphenationTree.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\PatternConsumer.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\PatternParser.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\TernaryTree.cs" />
     <Compile Include="Analysis\Core\KeywordAnalyzer.cs" />
     <Compile Include="Analysis\Core\KeywordTokenizer.cs" />
     <Compile Include="Analysis\Core\KeywordTokenizerFactory.cs" />
@@ -481,6 +496,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Analysis\Gl\galician.rslp" />
     <EmbeddedResource Include="Analysis\Pt\portuguese.rslp" />
+    <EmbeddedResource Include="Analysis\Compound\Hyphenation\hyphenation.dtd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
