--- a/src/Lucene.Net.TestFramework/Lucene.Net.TestFramework.csproj
+++ b/src/Lucene.Net.TestFramework/Lucene.Net.TestFramework.csproj
@@ -476,6 +476,7 @@
     <ProjectReference Include="..\Lucene.Net.Analysis.Common\Lucene.Net.Analysis.Common.csproj">
       <Project>{4ADD0BBC-B900-4715-9526-D871DE8EEA64}</Project>
       <Name>Lucene.Net.Analysis.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Lucene.Net.Codecs\Lucene.Net.Codecs.csproj">
       <Project>{3f79b6d4-4359-4f83-b64f-07f4f6262425}</Project>
       <Name>Lucene.Net.Codecs</Name>
